--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -29,7 +29,7 @@
     owner: root
     group: root
     mode: 0755
-  when: mysql_config_include_files | length
+  when: mysql_config_include_files | length > 0
 
 - name: Copy my.cnf override files into include directory.
   ansible.builtin.template:
@@ -38,7 +38,7 @@
     owner: root
     group: root
     mode: 0644
-    force: "{{ item.force | default(false) }}"
+    force: "{{ item.force | default(False) }}"
   with_items: "{{ mysql_config_include_files }}"
   notify: restart mysql
 
@@ -64,15 +64,15 @@
     owner: mysql
     group: "{{ mysql_log_file_group }}"
     mode: 0640
-  when: mysql_slow_query_log_enabled
+  when: mysql_slow_query_log_enabled | bool
 
 - name: Create error log file (if configured).
   ansible.builtin.command: "touch {{ mysql_log_error }}"
   args:
     creates: "{{ mysql_log_error }}"
   when:
-    - mysql_log | default(true)
-    - mysql_log_error | default(false)
+    - mysql_log | default(true) | bool
+    - mysql_log_error | default(false) | bool
   tags: ['skip_ansible_galaxy']
 
 - name: Set ownership on error log file (if configured).
@@ -83,8 +83,8 @@
     group: "{{ mysql_log_file_group }}"
     mode: 0640
   when:
-    - mysql_log | default(true)
-    - mysql_log_error | default(false)
+    - mysql_log | default(true)  | bool
+    - mysql_log_error | default(false) | bool
   tags: ['skip_ansible_galaxy']
 
 - name: Ensure MySQL is started and enabled on boot.
