--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,6 +1,6 @@
 ---
 - name: Ensure MySQL users are present.
-  mysql_user:
+  community.mysql.mysql_user:
     name: "{{ item.name }}"
     host: "{{ item.host | default('localhost') }}"
     password: "{{ item.password }}"
@@ -8,7 +8,7 @@
     state: "{{ item.state | default('present') }}"
     append_privs: "{{ item.append_privs | default(false) }}"
     encrypted: "{{ item.encrypted | default(false) }}"
-    column_case_sensitive: "{{ item.case_sensitive | default(false) }}"
+    # column_case_sensitive: "{{ item.case_sensitive | default(false) }}"
     update_password: "{{ item.update_password | default('always') }}"
   with_items: "{{ mysql_users }}"
   no_log: "{{ mysql_hide_passwords }}"
